Fixed dark mode

--- a/web/src/components/Menu/styles.css
+++ b/web/src/components/Menu/styles.css
@@ -1,10 +1,20 @@
+@keyframes slowShow {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
 .blur {
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 0px;
+    transition: all 10s;
     background: rgba(28,26,50,0.43);
+    animation: 0.3s ease-out 0s 1 slowShow;
 }
 
 .menu-container {
@@ -18,6 +28,7 @@
     align-items: center;
     flex-direction: column;
     background-color: var(--color-background);
+    animation: 0.4s ease-out 0s 1 slowShow;
 }
 
 .menu-container .header-menu {
